# talent-plan

courses/rust/projects/project-1/: Cargo.toml
courses/rust/projects/project-1-impl/: Cargo.toml
courses/rust/projects/project-1-impl/src/: hash_impl.rs  lib.rs
courses/rust/projects/project-2-impl/: Cargo.toml
courses/rust/projects/project-2-impl/src/: bitcask_impl.rs  hash_impl.rs  lib.rs
courses/rust/projects/project-3-impl/: Cargo.toml
courses/rust/projects/project-3-impl/benches/: benches.rs  engine_bench.rs
courses/rust/projects/project-3-impl/src/: client.rs  cmd.rs  errors.rs  lib.rs  requests.rs  server.rs  utils.rs
courses/rust/projects/project-3-impl/src/engines/: kvs_engine.rs  mod.rs  sled_engine.rs
courses/rust/projects/project-3-impl/tests/: cli.rs
courses/rust/projects/project-4-impl/: Cargo.toml
courses/rust/projects/project-4-impl/src/: errors.rs  lib.rs  requests.rs
courses/rust/projects/project-4-impl/src/engines/: kvs_engine.rs  mod.rs  sled_engine.rs
courses/rust/projects/project-4-impl/src/thread_pool/: mod.rs  naive.rs  shared_queue_threadpool.rs
courses/rust/projects/project-4-impl/tests/: kv_store.rs
