[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["RT_Enzyme[RT_Enzyme@163.com]"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.16", features=["cargo"]}

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"