[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["RT_Enzyme[RT_Enzyme@163.com]"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.16", features=["cargo"]}
failure = "0.1.8"
serde_json = "1.0"
serde = "1.0.142"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
